--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ if(NOT EXISTS "${VCPKG_ROOT_DIR}" AND EXISTS "${CMAKE_CONFIG_FILE_DIR}")
 		OR NOT EXISTS "${OPUS_INCLUDE_DIR}" OR NOT EXISTS "${OPUS_RELEASE_ROOT}" OR NOT EXISTS "${OPUS_DEBUG_ROOT}"
 		OR NOT EXISTS "${SODIUM_INCLUDE_DIR}" OR NOT EXISTS "${SODIUM_RELEASE_ROOT}" OR NOT EXISTS "${SODIUM_DEBUG_ROOT}")
 		
-		message(FATAL_ERROR "Sorry - but please set the _DEBUG_ROOT, _RELEASE_ROOT AND _INCLUDE_DIR values in CMakeLists.txt!")
+		message(FATAL_ERROR "Sorry - but please set the <DEPENDENCY>_DEBUG_ROOT, <DEPENDENCY>_RELEASE_ROOT AND <DEPENDENCY>_INCLUDE_DIR values in CMakeLists.txt!")
 	endif()	
 elseif(EXISTS "${VCPKG_ROOT_DIR}")
 	include("${VCPKG_ROOT_DIR}/scripts/buildsystems/vcpkg.cmake")
