--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,10 +65,10 @@ else()
 	message(FATAL_ERROR "Please, set the VCPKG base directory, or the location of the DiscordCoreAPIConfig.cmake file!")
 endif()
 
-include(FindFFMPEG)
-include(FindNlohmannJson)
-include(FindOpenSSL)
-include(FindOpus)
-include(FindSodium)
+find_package(FFMPEG MODULE REQUIRED)
+find_package(NLOHMANNJSON MODULE REQUIRED)
+find_package(OPENSSL MODULE REQUIRED)
+find_package(OPUS MODULE REQUIRED)
+find_package(SODIUM MODULE REQUIRED)
 
 add_subdirectory(Executable)
