--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ set(SODIUM_INCLUDE_DIR "")
 set(SODIUM_RELEASE_ROOT "")
 set(SODIUM_DEBUG_ROOT "")
 
+# Also, set this value to install the output files to a particular location.
+set(CMAKE_INSTALL_PREFIX)
+
 cmake_minimum_required(VERSION 3.20)
 set(PROJECT_NAME "DiscordCoreAPI-Bot")
 set(PRODUCT_VERSION "1.0.0.9")
@@ -30,6 +33,19 @@ project(
 )
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake;${CMAKE_SOURCE_DIR}/CMake/Find-Scripts") 
 set(CMAKE_CONFIGURATION_TYPES "${CMAKE_BUILD_TYPE}")
+
+if (WIN32)
+	if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+		cmake_path(GET CMAKE_ROOT ROOT_PATH ROOT_DRIVE)
+		set(CMAKE_INSTALL_PREFIX "${ROOT_DRIVE}Users/$ENV{USERNAME}/CMake/${PROJECT_NAME}" CACHE PATH "The CMake install prefix." FORCE)
+	endif()
+elseif(UNIX)
+	if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+		set(CMAKE_INSTALL_PREFIX "/home/$ENV{USERNAME}/CMake/${PROJECT_NAME}" CACHE PATH "The CMake install prefix." FORCE)
+	endif()
+else()
+		message(FATAL_ERROR "Sorry, but your OS is not supported!")
+endif()
 
 if(NOT EXISTS "${VCPKG_ROOT_DIR}" AND EXISTS "${CMAKE_CONFIG_FILE_DIR}")
 	set(DiscordCoreAPI_DIR "${CMAKE_CONFIG_FILE_DIR}")
