--- a/Executable/CMakeLists.txt
+++ b/Executable/CMakeLists.txt
@@ -41,22 +41,22 @@ if (WIN32 AND NOT EXISTS "${VCPKG_ROOT}")
 	install(
 		FILES 
 		"$<TARGET_PDB_FILE:${PROJECT_NAME}>"
-		DESTINATION "Output Files/$<CONFIG>"
+		DESTINATION "$<CONFIG>"
 		OPTIONAL
 	)
 	install (FILES 
 		"$<IF:$<CONFIG:Debug>,${DEBUG_PDB_FILE_PATH},${RELEASE_PDB_FILE_PATH}>" 
-		DESTINATION "Output Files/$<CONFIG>"
+		DESTINATION "$<CONFIG>"
 	)	
 	install(
 		FILES 
 		"$<TARGET_RUNTIME_DLLS:${PROJECT_NAME}>"
-		DESTINATION "Output Files/$<CONFIG>"
+		DESTINATION "$<CONFIG>"
 	)
 endif()
 
 install(
 	FILES 
 	"$<TARGET_FILE:${PROJECT_NAME}>"
-	DESTINATION "Output Files/$<CONFIG>"
+	DESTINATION "$<CONFIG>"
 )
