--- a/Executable/CMakeLists.txt
+++ b/Executable/CMakeLists.txt
@@ -35,6 +35,7 @@ set_target_properties(
 	"${PROJECT_NAME}" PROPERTIES 
 	OUTPUT_NAME "${PROJECT_NAME}-Cpp"
 	VS_GLOBAL_VcpkgEnabled true
+	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/$<CONFIG>"
 )
 
 if (WIN32 AND NOT EXISTS "${VCPKG_ROOT}")
@@ -42,9 +43,9 @@ if (WIN32 AND NOT EXISTS "${VCPKG_ROOT}")
 		FILES 
 		"$<TARGET_PDB_FILE:${PROJECT_NAME}>"
 		DESTINATION "$<CONFIG>"
-		OPTIONAL
 	)
-	install (FILES 
+	install(
+		FILES 
 		"$<IF:$<CONFIG:Debug>,${DEBUG_PDB_FILE_PATH},${RELEASE_PDB_FILE_PATH}>" 
 		DESTINATION "$<CONFIG>"
 	)	
