--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,11 +37,11 @@ set(CMAKE_CONFIGURATION_TYPES "${CMAKE_BUILD_TYPE}")
 if (WIN32)
 	if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 		cmake_path(GET CMAKE_ROOT ROOT_PATH ROOT_DRIVE)
-		set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/Output Files" CACHE PATH "The CMake install prefix." FORCE)
+		set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/Output Files/" CACHE PATH "The CMake install prefix." FORCE)
 	endif()
 elseif(UNIX)
 	if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-		set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/Output Files" CACHE PATH "The CMake install prefix." FORCE)
+		set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/Output Files/" CACHE PATH "The CMake install prefix." FORCE)
 	endif()
 else()
 		message(FATAL_ERROR "Sorry, but your OS is not supported!")
