--- a/Executable/CMakeLists.txt
+++ b/Executable/CMakeLists.txt
@@ -29,6 +29,7 @@ endif()
 target_link_libraries(
 	"${PROJECT_NAME}" PUBLIC
 	DiscordCoreAPI::DiscordCoreAPI
+	simdjson::simdjson
 )
 
 set_target_properties(
