--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,24 @@
 # Set this value...
-set(VCPKG_ROOT_DIR "/home/chris/vcpkg")
+set(VCPKG_ROOT_DIR "")
 # OR this value...
-set(CMAKE_CONFIG_FILE_DIR "")
+set(CMAKE_CONFIG_FILE_DIR "C:/Users/Chris/CMake/DiscordCoreAPI/share/discordcoreapi")
 # AND these values.
-set(FFMPEG_INCLUDE_DIR "")
-set(FFMPEG_RELEASE_ROOT "")
-set(FFMPEG_DEBUG_ROOT "")
-set(NLOHMANN_INCLUDE_DIR "")
-set(OPENSSL_INCLUDE_DIR "")
-set(OPENSSL_RELEASE_ROOT "")
-set(OPENSSL_DEBUG_ROOT "")
-set(OPUS_INCLUDE_DIR "")
-set(OPUS_RELEASE_ROOT "")
-set(OPUS_DEBUG_ROOT "")
-set(SODIUM_INCLUDE_DIR "")
-set(SODIUM_RELEASE_ROOT "")
-set(SODIUM_DEBUG_ROOT "")
+set(FFMPEG_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
+set(FFMPEG_RELEASE_ROOT "C:/Vcpkg/installed/x64-windows/lib")
+set(FFMPEG_DEBUG_ROOT "C:/Vcpkg/installed/x64-windows/debug/lib")
+set(NLOHMANN_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
+set(OPENSSL_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
+set(OPENSSL_RELEASE_ROOT "C:/Vcpkg/installed/x64-windows/lib")
+set(OPENSSL_DEBUG_ROOT "C:/Vcpkg/installed/x64-windows/debug/lib")
+set(OPUS_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
+set(OPUS_RELEASE_ROOT "C:/Vcpkg/installed/x64-windows/lib")
+set(OPUS_DEBUG_ROOT "C:/Vcpkg/installed/x64-windows/debug/lib")
+set(SIMDJSON_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
+set(SIMDJSON_RELEASE_ROOT "C:/Vcpkg/installed/x64-windows/lib")
+set(SIMDJSON_DEBUG_ROOT "C:/Vcpkg/installed/x64-windows/debug/lib")
+set(SODIUM_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
+set(SODIUM_RELEASE_ROOT "C:/Vcpkg/installed/x64-windows/lib")
+set(SODIUM_DEBUG_ROOT "C:/Vcpkg/installed/x64-windows/debug/lib")
 
 # Also, set this value to install the output files to a particular location.
 set(CMAKE_INSTALL_PREFIX)
@@ -58,7 +61,7 @@ if(NOT EXISTS "${VCPKG_ROOT_DIR}" AND EXISTS "${CMAKE_CONFIG_FILE_DIR}")
 		message(FATAL_ERROR "Sorry - but please set the <DEPENDENCY>_DEBUG_ROOT, <DEPENDENCY>_RELEASE_ROOT AND <DEPENDENCY>_INCLUDE_DIR values in CMakeLists.txt!")
 	endif()	
 elseif(EXISTS "${VCPKG_ROOT_DIR}")
-	include("${VCPKG_ROOT_DIR}/scripts/buildsystems/vcpkg.cmake")
+	include("${VCPKG_ROOT_DIR}/scripts/buildsystems/Vcpkg.cmake")
 	string(TOLOWER "${CMAKE_HOST_SYSTEM_NAME}" OS_NAME)
 	set(VCPKG_INSTALLED_DIR "${VCPKG_ROOT_DIR}/installed/x64-${OS_NAME}")
 	set(VCPKG_INCLUDE_DIR "${VCPKG_INSTALLED_DIR}/include")
@@ -74,6 +77,9 @@ elseif(EXISTS "${VCPKG_ROOT_DIR}")
 	set(OPUS_INCLUDE_DIR "${VCPKG_INCLUDE_DIR}")
 	set(OPUS_RELEASE_ROOT "${VCPKG_RELEASE_ROOT}")
 	set(OPUS_DEBUG_ROOT "${VCPKG_DEBUG_ROOT}")
+	set(SIMDJSON_INCLUDE_DIR "${VCPKG_INCLUDE_DIR}")
+	set(SIMDJSON_RELEASE_ROOT "${VCPKG_RELEASE_ROOT}")
+	set(SIMDJSON_DEBUG_ROOT "${VCPKG_DEBUG_ROOT}")
 	set(SODIUM_INCLUDE_DIR "${VCPKG_INCLUDE_DIR}")
 	set(SODIUM_RELEASE_ROOT "${VCPKG_RELEASE_ROOT}")
 	set(SODIUM_DEBUG_ROOT "${VCPKG_DEBUG_ROOT}")
@@ -85,8 +91,8 @@ find_package(FFMPEG MODULE REQUIRED)
 find_package(NLOHMANN MODULE REQUIRED)
 find_package(OPENSSL MODULE REQUIRED)
 find_package(OPUS MODULE REQUIRED)
+find_package(SIMDJSON MODULE REQUIRED)
 find_package(SODIUM MODULE REQUIRED)
-find_package(simdjson MODULE REQUIRED)
 find_package(DiscordCoreAPI CONFIG REQUIRED)
 
 add_subdirectory(Executable)
