--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,24 @@
 # Set this value...
 set(VCPKG_ROOT_DIR "/home/chris/vcpkg")
 # OR this value...
-set(CMAKE_CONFIG_FILE_DIR "C:/Users/Chris/CMake/DiscordCoreAPI/share/discordcoreapi")
+set(CMAKE_CONFIG_FILE_DIR "")
 # AND these values.
-set(FFMPEG_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
-set(FFMPEG_RELEASE_ROOT "C:/Vcpkg/installed/x64-windows/lib")
-set(FFMPEG_DEBUG_ROOT "C:/Vcpkg/installed/x64-windows/debug/lib")
-set(NLOHMANN_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
-set(OPENSSL_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
-set(OPENSSL_RELEASE_ROOT "C:/Vcpkg/installed/x64-windows/lib")
-set(OPENSSL_DEBUG_ROOT "C:/Vcpkg/installed/x64-windows/debug/lib")
-set(OPUS_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
-set(OPUS_RELEASE_ROOT "C:/Vcpkg/installed/x64-windows/lib")
-set(OPUS_DEBUG_ROOT "C:/Vcpkg/installed/x64-windows/debug/lib")
-set(SIMDJSON_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
-set(SIMDJSON_RELEASE_ROOT "C:/Vcpkg/installed/x64-windows/lib")
-set(SIMDJSON_DEBUG_ROOT "C:/Vcpkg/installed/x64-windows/debug/lib")
-set(SODIUM_INCLUDE_DIR "C:/Vcpkg/installed/x64-windows/include")
-set(SODIUM_RELEASE_ROOT "C:/Vcpkg/installed/x64-windows/lib")
-set(SODIUM_DEBUG_ROOT "C:/Vcpkg/installed/x64-windows/debug/lib")
+set(FFMPEG_INCLUDE_DIR "")
+set(FFMPEG_RELEASE_ROOT "")
+set(FFMPEG_DEBUG_ROOT "")
+set(NLOHMANN_INCLUDE_DIR "")
+set(OPENSSL_INCLUDE_DIR "")
+set(OPENSSL_RELEASE_ROOT "")
+set(OPENSSL_DEBUG_ROOT "")
+set(OPUS_INCLUDE_DIR "")
+set(OPUS_RELEASE_ROOT "")
+set(OPUS_DEBUG_ROOT "")
+set(SIMDJSON_INCLUDE_DIR "")
+set(SIMDJSON_RELEASE_ROOT "")
+set(SIMDJSON_DEBUG_ROOT "")
+set(SODIUM_INCLUDE_DIR "")
+set(SODIUM_RELEASE_ROOT "")
+set(SODIUM_DEBUG_ROOT "")
 
 # Also, set this value to install the output files to a particular location.
 set(CMAKE_INSTALL_PREFIX)
