--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,24 @@
 # Set this value...
-set(VCPKG_ROOT_DIR "")
+set(VCPKG_ROOT_DIR "C:/vcpkg")
 # OR this value...
-set(CMAKE_CONFIG_FILE_DIR "C:/users/chris/cmake/discordcoreapi/share/discordcoreapi")
+set(CMAKE_CONFIG_FILE_DIR "")
 # AND these values.
-set(FFMPEG_DIR "C:/Vcpkg/installed/x64-windows/share/ffmpeg") # Set this one to the folder location of the file "FindFFMPEG.cmake".
-set(Opus_DIR "C:/Vcpkg/installed/x64-windows/share/opus") # Set this one to the folder location of the file "OpusConfig.cmake".
-set(simdjson_DIR "C:/Vcpkg/installed/x64-windows/share/simdjson") # Set this one to the folder location of the file "simdjson-config.cmake".
-set(unofficial-sodium_DIR "C:/Vcpkg/installed/x64-windows/share/unofficial-sodium") # Set this one to the folder location of the file "unofficial-sodiumConfig.cmake".
+set(FFMPEG_INCLUDE_DIR "")
+set(FFMPEG_RELEASE_ROOT "")
+set(FFMPEG_DEBUG_ROOT "")
+set(OPENSSL_INCLUDE_DIR "")
+set(OPENSSL_RELEASE_ROOT "")
+set(OPENSSL_DEBUG_ROOT "")
+set(OPUS_INCLUDE_DIR "")
+set(OPUS_RELEASE_ROOT "")
+set(OPUS_DEBUG_ROOT "")
+set(SIMDJSON_INCLUDE_DIR "")
+set(SIMDJSON_RELEASE_ROOT "")
+set(SIMDJSON_DEBUG_ROOT "")
+set(SODIUM_INCLUDE_DIR "")
+set(SODIUM_RELEASE_ROOT "")
+set(SODIUM_DEBUG_ROOT "")
+
 # Also, set this value to install the output files to a particular location.
 set(CMAKE_INSTALL_PREFIX)
 
@@ -22,7 +34,7 @@ project(
 	HOMEPAGE_URL "https://discordcoreapi.com"
 	DESCRIPTION "${DESCRIPTION}"
 )
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake;${CMAKE_SOURCE_DIR}/CMake/Find-Scripts;${FFMPEG_DIR}") 
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake;${CMAKE_SOURCE_DIR}/CMake/Find-Scripts") 
 set(CMAKE_CONFIGURATION_TYPES "${CMAKE_BUILD_TYPE}")
 
 if (WIN32)
@@ -39,14 +51,45 @@ else()
 endif()
 
 if(NOT EXISTS "${VCPKG_ROOT_DIR}" AND EXISTS "${CMAKE_CONFIG_FILE_DIR}")
+	set(DiscordCoreAPI_DIR "${CMAKE_CONFIG_FILE_DIR}")
+	if (NOT EXISTS "${FFMPEG_INCLUDE_DIR}" OR NOT EXISTS "${FFMPEG_RELEASE_ROOT}" OR NOT EXISTS "${FFMPEG_DEBUG_ROOT}"
+		OR NOT EXISTS "${OPENSSL_INCLUDE_DIR}" OR NOT EXISTS "${OPENSSL_RELEASE_ROOT}" OR NOT EXISTS "${OPENSSL_DEBUG_ROOT}"
+		OR NOT EXISTS "${OPUS_INCLUDE_DIR}" OR NOT EXISTS "${OPUS_RELEASE_ROOT}" OR NOT EXISTS "${OPUS_DEBUG_ROOT}"
+		OR NOT EXISTS "${SODIUM_INCLUDE_DIR}" OR NOT EXISTS "${SODIUM_RELEASE_ROOT}" OR NOT EXISTS "${SODIUM_DEBUG_ROOT}")
+		
+		message(FATAL_ERROR "Sorry - but please set the <DEPENDENCY>_DEBUG_ROOT, <DEPENDENCY>_RELEASE_ROOT AND <DEPENDENCY>_INCLUDE_DIR values in CMakeLists.txt!")
+	endif()	
 elseif(EXISTS "${VCPKG_ROOT_DIR}")
 	include("${VCPKG_ROOT_DIR}/scripts/buildsystems/vcpkg.cmake")
 	string(TOLOWER "${CMAKE_HOST_SYSTEM_NAME}" OS_NAME)
 	set(VCPKG_INSTALLED_DIR "${VCPKG_ROOT_DIR}/installed/x64-${OS_NAME}")
+	set(VCPKG_INCLUDE_DIR "${VCPKG_INSTALLED_DIR}/include")
+	set(VCPKG_RELEASE_ROOT "${VCPKG_INSTALLED_DIR}/lib")
+	set(VCPKG_DEBUG_ROOT "${VCPKG_INSTALLED_DIR}/debug/lib")
+	set(FFMPEG_INCLUDE_DIR "${VCPKG_INCLUDE_DIR}")
+	set(FFMPEG_RELEASE_ROOT "${VCPKG_RELEASE_ROOT}")
+	set(FFMPEG_DEBUG_ROOT "${VCPKG_DEBUG_ROOT}")
+	set(OPENSSL_INCLUDE_DIR "${VCPKG_INCLUDE_DIR}")
+	set(OPENSSL_RELEASE_ROOT "${VCPKG_RELEASE_ROOT}")
+	set(OPENSSL_DEBUG_ROOT "${VCPKG_DEBUG_ROOT}")
+	set(OPUS_INCLUDE_DIR "${VCPKG_INCLUDE_DIR}")
+	set(OPUS_RELEASE_ROOT "${VCPKG_RELEASE_ROOT}")
+	set(OPUS_DEBUG_ROOT "${VCPKG_DEBUG_ROOT}")
+	set(SIMDJSON_INCLUDE_DIR "${VCPKG_INCLUDE_DIR}")
+	set(SIMDJSON_RELEASE_ROOT "${VCPKG_RELEASE_ROOT}")
+	set(SIMDJSON_DEBUG_ROOT "${VCPKG_DEBUG_ROOT}")
+	set(SODIUM_INCLUDE_DIR "${VCPKG_INCLUDE_DIR}")
+	set(SODIUM_RELEASE_ROOT "${VCPKG_RELEASE_ROOT}")
+	set(SODIUM_DEBUG_ROOT "${VCPKG_DEBUG_ROOT}")
 else()
 	message(FATAL_ERROR "Please, set the VCPKG base directory, or the location of the DiscordCoreAPIConfig.cmake file!")
 endif()
 
+find_package(FFMPEG MODULE REQUIRED)
+find_package(OPENSSL MODULE REQUIRED)
+find_package(OPUS MODULE REQUIRED)
+find_package(SIMDJSON MODULE REQUIRED)
+find_package(SODIUM MODULE REQUIRED)
 find_package(DiscordCoreAPI CONFIG REQUIRED)
 
 add_subdirectory(Executable)
